--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = SERVER
 # ===============================
-server.servlet.context-path=/test
+server.servlet.context-path=/
 server.port=${SERVER_PORT:8080}
 # ===============================
 # = DATABASE CONNECTION
